[package]
name = "netrs"
description = "Userspace networking library and utilities"
version = "0.0.0"
authors = ["wilypomegranate <wilypomegranate@users.noreply.github.com>"]
homepage = "https://github.com/wilypomegranate/netrs"
edition = "2018"
license = "MPL-2.0"

[dependencies]
libc = "0.2.60"
byteorder = "1.3.2"
